# bob

./: Cargo.toml  build.sh
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  setup.rs  utils.rs
miner-v2/src/: lib.rs  main.rs
minter-v2/src/: main.rs
pool/: Cargo.toml  pool.did
pool/src/: bob_calls.rs  guard.rs  lib.rs  main.rs  memory.rs  rewards.rs  state_machine.rs  system_calls.rs  types.rs
scripts/: run-integration-tests.sh
